# djj

./: .dockerignore  .env.example  .git-credentials  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
api/: auth.py  config.py  scanner.py  server.py
web/: index.html  pc.html
web/css/: style.css
