[project]
name = "djj"
version = "2.0.0"
description = "仿抖音随机视频播放站"
authors = [{name = "lzylipu"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
